--- a/src/Nemandi/Controls/WordListItem.xaml
+++ b/src/Nemandi/Controls/WordListItem.xaml
@@ -4,21 +4,22 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Nemandi"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="90*"/>
-            <RowDefinition Height="10*"/>
-        </Grid.RowDefinitions>
-        <DockPanel Grid.RowSpan="1">
-            <TextBlock x:Name="wordTxt" Margin="10" FontSize="20">adventure</TextBlock>
-            <TextBlock x:Name="defTxt" Margin="10" FontSize="20" Foreground="Gray">历险</TextBlock>
-        </DockPanel>
-        <TextBlock x:Name="srcTxt" TextAlignment="Right" 
-                   Margin="0,0,20,0" Foreground="Gray"
-                   Grid.Row="1">
-            Oxford Dict
-        </TextBlock>
-    </Grid>
+             xmlns:mvvm="clr-namespace:Nemandi.MVVM"
+             mc:Ignorable="d">
+    <UserControl.Resources>
+        <mvvm:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter" />
+    </UserControl.Resources>
+    <DockPanel Width="{Binding ActualWidth, ElementName=WordList, Mode=OneWay}" Height="50" Margin="0">
+        <TextBlock Text="{Binding HeadWord}" FontSize="25" FontWeight="SemiBold"
+                   FontFamily="Calibri" Foreground="{DynamicResource SystemChromeMediumLowColorBrush}"
+                   VerticalAlignment="Center"/>
+        <TextBlock Text="{Binding POS}" TextAlignment="Center" Margin="10 0 0 0" Background="#FF00B239"
+                   Visibility="{Binding POS, Converter={StaticResource EmptyStringToVisibilityConverter}}"
+                   Padding="3 0 3 2" FontWeight="Bold"
+                   FontStyle="Italic" Foreground="White"
+                   FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center"
+                   FontFamily="Calibri" />
+        <TextBlock Text="{Binding PreviewDef}" VerticalAlignment="Center" Margin="10 0 0 0"
+                   FontSize="20" FontFamily="Calibri"/>
+    </DockPanel>
 </UserControl>
